# yatta

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  __init__.py  client.py  enums.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  test.py
.github/workflows/: auto-release.yml  build-docs.yml  create-release.yml  main.yml  release.yml
client/: index.html
docs/: README.md  client.md  enums.md  exceptions.md  getting_started.md  index.md  models.md  utils.md
enums/: index.html
exceptions/: index.html
getting_started/: index.html
models/: book.py  character.py  index.html  item.py  light_cone.py  message.py  relic.py
search/: search_index.json
tests/: test_langs.py  test_models.py
utils/: index.html
yatta/: __init__.py  client.py  enums.py  exceptions.py  utils.py
yatta/models/: __init__.py  base.py  book.py  change_log.py  character.py  item.py  light_cone.py  message.py  relic.py
