[project]
name = "yatta-py"
version = "1.3.15"
description = "Async API wrapper for Project Yatta (sr.yatta.moe) written in Python"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp-client-cache[sqlite]>=0.12.3",
    "aiohttp>=3.10.9",
    "pydantic>=2.9.2",
    "loguru>=0.7.3",
    "aiofiles>=24.1.0",
    "anyio>=4.11.0",
]
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/seriaati/yatta"
Repository = "https://github.com/seriaati/yatta.git"
Issues = "https://github.com/seriaati/yatta/issues"
Documentation = "https://gh.seria.moe/yatta"

[dependency-groups]
test = ["pytest>=8.4.2", "pytest-asyncio>=1.2.0"]
docs = ["mkdocs-material>=9.6.11", "mkdocstrings[python]>=0.29.1", "griffe-pydantic>=1.1.7"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["yatta"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "standard"

[tool.uv.build-backend]
module-name = "yatta"
module-root = ""
